attempting to rempve all swagger API implementatiion

--- a/Source/AndreasSteffensenCV/andreassteffensencv.client/src/app/app.component.html
+++ b/Source/AndreasSteffensenCV/andreassteffensencv.client/src/app/app.component.html
@@ -1,24 +1,52 @@
-﻿<h1 id="tableLabel">Weather forecast</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    .container {
+      width: 1440px;
+      height: 1441px;
+      position: relative;
+      background: white;
+    }
 
-<p>This component demonstrates fetching data from the server.</p>
+    .black-box-top, .black-box-bottom {
+      width: 1440px;
+      height: 305px;
+      position: absolute;
+      background: black;
+    }
 
-<p *ngIf="!forecasts"><em>Loading... Please refresh once the ASP.NET backend has started. See <a href="https://aka.ms/jspsintegrationangular">https://aka.ms/jspsintegrationangular</a> for more details.</em></p>
+    .black-box-top {
+      top: 0;
+    }
 
-<table *ngIf="forecasts">
-    <thead>
-        <tr>
-            <th>Date</th>
-            <th>Temp. (C)</th>
-            <th>Temp. (F)</th>
-            <th>Summary</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr *ngFor="let forecast of forecasts">
-            <td>{{ forecast.date }}</td>
-            <td>{{ forecast.temperatureC }}</td>
-            <td>{{ forecast.temperatureF }}</td>
-            <td>{{ forecast.summary }}</td>
-        </tr>
-    </tbody>
-</table>
+    .black-box-bottom {
+      top: 1136px;
+    }
+
+    .info-box {
+      width: 252px;
+      height: 103px;
+      position: absolute;
+      left: 38px;
+      top: 41px;
+      color: white;
+      font-size: 12px;
+      font-family: Inter;
+      font-weight: 400;
+      word-wrap: break-word;
+    }
+  </style>
+</head>
+<body>
+
+  <div class="container">
+    <div class="black-box-top"></div>
+    <div class="black-box-bottom"></div>
+    <div class="info-box">Andreas Steffensen</div>
+  </div>
+
+</body>
+</html>
